2017-08-12 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c: Support
	checkout of all dynamic address info (source, status, prefix_length)
	
2017-08-11 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c:
	Support configuring IPv6/ipv4 addressing.  Fix error message
	outputs.
	
	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c:
	Re-work output of IPv6 addresses, a separate key is not generated
	for each possible address output.

2017-08-09 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c: Check
	malloc for errors.

	* Fix compiler warnings.

	* libfreeipmi/cmds/ipmi-lan-cmds.c: Fix incorrect LS vs. MS comment.

	* ipmi-config/: Minor code cleanup.

	* libfreeipmi/: Support IPv6 configuration templates and commands.
	
2017-07-18 Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_store_sensor_reading): Fix several mem-leak corner cases.
	
2017-07-10 Albert Chu <chu11@llnl.gov>

	* Update various documentation for consistency, "Ipmi" to "ipmi"
	when appropriate, "Bmc" to "bmc", etc.
	
2017-07-10 Josef Ridky <jridky@redhat.com>

	* man/freeipmi.7.pre.in: Lower case "Ipmi" to "ipmi".
	
2017-06-27 Ike Panhc <ike.pan@canonical.com>

	* libfreeipmi/locate/ipmi-locate-dmidecode.c: Use dmi firmware in
	sysfs if available.  mmap() does not work on DMI tables so also
	fallback to read if mmap() failed.

2017-04-07 LaMont Jones <lamont@mmjgroup.com>

	* ipmi-config/: Support ability to read some IPv6 config
	information.
	
2017-04-03 LaMont Jones <lamont@mmjgroup.com>

	* libfreeipmi/: Add support to read IPv6 configuration.
	
2017-03-20 Albert Chu <chu11@llnl.gov>
	
	* man/ipmiseld.8.pre.in: Clarify --test-run and --foreground
	options.

	* common/toolcommon/tool-daemon-common.c (daemonize_common):
	Clarify fopen error on daemon pidfile

2017-01-30 Albert Chu <chu11@llnl.gov>
	